# learnix-ai-server

./: main.py  pyproject.toml  requirements.txt
test_chat_app/: main.py
